<resources>
    <!--About界面String-->
    <string name="app_name">i河畔</string>
    <string name="developer">开发者</string>
    <string name="developer_name" translatable="false">Febers</string>
    <string name="developer_email" translatable="false">febers418@qq.com</string>
    <string name="app_project_url" translatable="false">https://github.com/Febers/UESTC_BBS</string>
    <string name="version">版本</string>
    <string name="version_value" translatable="false">v1.1.8.1</string>
    <string name="check_update">检查更新</string>
    <string name="feedback_and_other">反馈、建议及其他</string>
    <string name="source_code">源代码</string>
    <string name="open_source">开源</string>
    <string name="open_source_project">开源项目</string>
    <string name="open_source_license">开源协议</string>
    <string name="about">关于</string>
    <string name="donate_developer">捐赠开发者</string>
    <string name="open_projects_using">本项目所使用的开源项目</string>

    <!--登录界面String-->
    <string name="user_password">密码</string>
    <string name="user_name">用户名</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="login_success">登录成功</string>

    <!--Home界面String-->
    <string name="home_page">首页</string>
    <string name="forum_list_page">版块</string>
    <string name="message_page">消息</string>
    <string name="more_page">更多</string>
    <string name="user_friends">好友</string>
    <string name="please_login_or_sign_up">请登录/注册</string>
    <string name="search">搜索</string>

    <!--Post界面String-->
    <string name="new_post">最新发表</string>
    <string name="new_reply">最新回复</string>
    <string name="hot_article">热门帖子</string>
    <string name="post_detail">帖子详情</string>
    <string name="post_reply_message">帖子回复</string>
    <string name="private_message">私信</string>
    <string name="system_message">系统通知</string>
    <string name="at_message">我</string>
    <string name="input_your_reply">请输入内容</string>
    <string name="post_content">内容</string>
    <string name="post_title">标题</string>
    <string name="post_fav">收藏</string>
    <string name="post_vote">投票</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="edit">编辑</string>
    <string name="bottom_text_hint"> ᕕ( ᐛ )ᕗ </string>

    <!--User界面String-->
    <string name="my_start_post">我的帖子</string>
    <string name="my_reply_post">我的回复</string>
    <string name="my_fav_post">我的收藏</string>

    <string name="user_post">发表</string>
    <string name="user_reply">回复</string>
    <string name="ta_new">Ta的发表</string>
    <string name="ta_reply">Ta的回复</string>
    <string name="user_favorite">收藏</string>
    <string name="change_sign">更改签名</string>


    <!--Setting界面String-->
    <string name="account">账户管理</string>
    <string name="setting">应用设置</string>
    <string name="choose_theme">选择主题</string>
    <string name="choose_block">选择板块</string>
    <string name="clear_cache">清除缓存</string>
    <string name="swipe_to_choose">左右滑动选择刷新样式</string>

    <string name="block_today_num">今日帖子</string>
    <string name="block_all_num">总帖子</string>
    <string name="show_sticky_post">显示置顶帖</string>

    <string name="account_detail">账户信息</string>
    <string name="no_login">未登录</string>
    <string name="take_effect_after_reboot">重启应用后生效</string>
    <string name="account_list">账户列表</string>
    <string name="add_user">添加用户</string>
    <string name="hint">提示</string>
    <string name="set_hint_style">设置消息提示的样式</string>
    <string name="icon">图标</string>
    <string name="choose_icon">选择图标</string>
    <string name="wait_a_moment_for_the_change_to_take_effect">选择图标之后,稍等片刻更改才会生效</string>
    <string name="icon_style_in_launcher">选择应用在启动器中显示的图标样式</string>
    <string name="refresh_style">刷新控件</string>
    <string name="choose_refresh_style">设置刷新控件样式</string>
    <string name="no_disturbing">免打扰</string>
    <string name="no_disturbing_explain">暂停后台轮询消息,您可手动刷新界面更新消息</string>
    <string name="hint_way_changed">提示方式已更改</string>
    <string name="cleaning">清除中</string>
    <string name="home_layout">主界面布局</string>
    <string name="choose_home_layout">选择不同的主界面布局，已设为：</string>

    <!--About界面-->
    <string name="thank_you">感谢您的捐赠!</string>
    <string name="error">捐赠出错啦</string>
    <string name="no_alipay_installed">您尚未安装支付宝</string>
    <string name="about_permission">权限说明</string>
    <string name="update_log">更新日志</string>
    <string name="check_update_log">查看更新日志</string>
    <string name="donate">捐赠</string>
    <string name="treat_the_developer_for_a_coke">请开发者喝一杯可乐 ๑乛v乛๑</string>
    <string name="click_to_the_open_source_projects_using">查看本项目所使用到的开源项目</string>
    <string name="click_to_developer_bbs_account">点击查看开发者河畔账号</string>

    <!--Theme界面String-->
    <string name="theme_green">酷安绿</string>
    <string name="theme_red">姨妈红</string>
    <string name="theme_pink">哔哩粉</string>
    <string name="theme_indigo">卧堤蓝</string>
    <string name="theme_teal">水鸭青</string>
    <string name="theme_purple">激情紫</string>
    <string name="theme_blue">知乎蓝</string>
    <string name="night_mode">夜间模式</string>
    <string name="theme_gray">低调灰</string>
    <string name="theme_style">主题风格</string>
    <string name="color_primary_dark_effect">colorPrimaryDark效果</string>


    <!--通用-->
    <string name="confirm">确定</string>
    <string name="send">发送</string>
    <string name="loading">正在加载</string>
    <string name="choose">选择</string>
    <string name="cancel">取消</string>
    <string name="menu">菜单</string>
    <string name="pm_content">私信内容</string>
    <string name="receiving_message_background">后台接收消息中</string>
    <string name="unknown">未知</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <!--导航-->
    <string name="bbs_navigation">河畔导航</string>
    <string name="lost_and_found">失物招领</string>
    <string name="school_bus_timetable">校车时刻表</string>
    <string name="school_calender">校历</string>
    <string name="novice_navigation">新手导航</string>

    <!--PandaEmoView-->
    <string name="tabicon">tabIcon</string>

    <string name="select_album">所有图片</string>
    <string name="pictures">图片</string>
    <string name="all_pictures">全部图片</string>
    <string name="make_dir_fail">创建文件失败！</string>

    <string name="content_to_request_permission">保证应用正常运行，请授予必要权限！</string>
    <string name="attention">提示</string>
    <string name="ok">好的~</string>
    <string name="manage">管理</string>
    <string name="delete">删除</string>
    <string name="use">使用</string>
    <string name="have_chosen">已选择</string>
    <string name="classification">分类列表</string>
    <string name="block_detail">板块信息</string>
    <string name="too_many_pictures">你要发布的帖子含有较多的图片，上传图片可能需要较长的时间</string>
    <string name="re_edit">重新编辑</string>
    <string name="search_content">搜索内容</string>
    <string name="searching">搜索中</string>
    <string name="web_page">网页视图</string>
    <string name="view_all">查看所有</string>
    <string name="view_only_author">只看楼主</string>
    <string name="reverse_view">倒序查看</string>
    <string name="positive_order_view">正序查看</string>
    <string name="copy_url">复制链接</string>
    <string name="share">分享</string>
    <string name="replies">条回复</string>
    <string name="copy_url_successfully">复制链接成功</string>
    <string name="cancel_collect">正在取消收藏</string>
    <string name="collecting">正在收藏</string>
    <string name="hide_sticky_post">隐藏置顶帖</string>
    <string name="home_layout_drawer">抽屉布局</string>
    <string name="home_layout_bottom">底部导航栏布局</string>
    <string name="share_app">分享应用</string>
    <string name="restart_app">重启应用</string>
    <string name="search_history_clear">清空</string>
    <string name="support">👍</string>
    <string name="oppose">👎</string>
    <string name="push_message">推送消息</string>
    <string name="retry">重试</string>
    <string name="push_message_des">查看所有的服务器推送消息</string>
    <string name="hint_check_network">请检查网络状况</string>
    <string name="browsing_history">浏览历史</string>
    <string name="web_out">外部浏览器打开</string>

    <!--防止引用系统默认时找不到该属性-->
    <!--<string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>-->
</resources>
