<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <ProgressBar
        android:id="@+id/progress_bar_update_sign"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_sign"
        android:layout_margin="4dp"
        android:textSize="@dimen/text_size_super_big"
        android:textColor="?text_color_first"/>

    <EditText
        android:id="@+id/edit_text_update_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:inputType="textMultiLine"
        android:layout_margin="4dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">
        <Button
            android:id="@+id/btn_dialog_sign_update_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="gone"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_alignParentStart="true"/>
        <Button
            android:id="@+id/btn_dialog_sign_update_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>