<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_push_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_super_big"
        android:text="@string/push_message"
        android:textColor="?attr/text_color_first"
        android:layout_margin="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progress_bar_push_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>
            <TextView
                android:id="@+id/tv_push_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=""/>
        </FrameLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <Button
            android:id="@+id/btn_retry_push_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:text="@string/retry"/>
        <Button
            android:id="@+id/btn_enter_push_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/confirm"/>
    </RelativeLayout>

</LinearLayout>