<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_toolbar_common" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_pb_height"
                android:indeterminate="true"
                android:visibility="invisible"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_text_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_text_user_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="center|bottom"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>